fix the header bar dark mode colors

--- a/styleDesktop.css
+++ b/styleDesktop.css
@@ -29,7 +29,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        background-color: rgba(36, 35, 43, .8);
+        background-color: rgba(255, 255, 255, .5);
         z-index: 100; 
 
     }
@@ -170,6 +170,10 @@
     .darkmode {
         color: white;
         background-color: rgb(36, 35, 43);
+    }
+
+    .darkmodehd {
+        background-color: rgba(36, 35, 43, 0.8);
     }
     
     .darkmodebotoes {
